<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pbp Async</string>
    <string name="edit_name">Name</string>
    <string name="edit_number">Phone Number</string>
    <string name="edit_address">Address</string>
    <string name="display_age">Age</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Key/Val</string>
    <string name="title_activity_display_message">"Message"</string>
    <string name="action_search">Search</string>
    <string name="devName">Developer</string>
    <string name="clear_settings">Clear</string>


</resources>
